--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-01-12 09:56+0000\n"
+"PO-Revision-Date: 2018-01-15 13:42+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2666,9 +2666,11 @@ msgstr "C'est une vérifcation supplémentaire en plus de la normale."
 
 msgid "The list of consultation notes shows the Bible the note refers to"
 msgstr ""
+"La liste des notes de consultation montre la Bible à laquelle la note fait "
+"référence"
 
 msgid "The consultation notes show the note status"
-msgstr ""
+msgstr "Les notes de consultation montrent l'état de la note"
 
 msgid "Send / Receive"
 msgstr "Envoyer / Recevoir"
@@ -11073,6 +11075,8 @@ msgid ""
 "Page break used for new reader portions and children's bibles where content "
 "is controlled by the page."
 msgstr ""
+"Saut de page utilisé pour les nouvelles portions de lecteur et les bibles "
+"pour enfants où le contenu est contrôlé par la page."
 
 msgid "Centered paragraph"
 msgstr "Paragraphe centré"
@@ -12712,9 +12716,3 @@ msgid "Username or email address or password are not correct"
 msgstr ""
 "Le nom d'utilisateur, l'adresse courriel ou le mot de passe ne sont pas "
 "corrects"
-
-#~ msgid ""
-#~ "The list of consultation notes shows the name of the Bible the note refers to"
-#~ msgstr ""
-#~ "La liste des notes de consultation montre le nom de la Bible à laquelle "
-#~ "elles se réfèrent"
