--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-01-15 13:42+0000\n"
+"PO-Revision-Date: 2018-01-19 12:15+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2776,15 +2776,23 @@ msgstr "Le journal affiche les messages de progression et de diagnostic."
 msgid "Book order"
 msgstr "Ordre des livres"
 
-msgid ""
-"Click to move books to another location to update the order of the books in "
-"this Bible."
+msgid "Update the order and put the deuterocanonical or apocryphal books:"
 msgstr ""
-"Cliquez pour déplacer des livres vers un autre emplacement pour mettre à "
-"jour l'ordre des livres dans cette Bible."
+"Mettre à jour l'ordre et ajouter les livres deutérocanoniques ou apocryphes :"
 
-msgid "Reset order."
-msgstr "Réinitialiser l'ordre."
+msgid "Interspersed among the books of the Hebrew Bible."
+msgstr "Dispersés parmi les livres de la Bible en hébreux."
+
+msgid "Between the Hebrew Bible and the New Testament."
+msgstr "Entre la Bible en hébreux et le Nouveau Testament."
+
+msgid "At the very end of the entire Bible."
+msgstr "Tout à la fin de la Bible."
+
+msgid "Click the arrows below to put the books in a custom order:"
+msgstr ""
+"Cliquez sur les flèches ci-dessous pour placer les livres dans un ordre "
+"personnalisé :"
 
 msgid "Font and text settings"
 msgstr "Paramètres de police et de texte"
