--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -2492,7 +2492,7 @@ msgstr ""
 msgid "Logout."
 msgstr ""
 
-msgid "Controls for dismissing change notifications at the top"
+msgid "Controls for selecting and dismissing change notifications at the top"
 msgstr ""
 
 msgid "This applies to the page with the change notifications."
@@ -3032,6 +3032,9 @@ msgid "(if their changes and verses match)"
 msgstr ""
 
 msgid "(all of them)"
+msgstr ""
+
+msgid "Select Bible:"
 msgstr ""
 
 msgid "This page lists the notifications of the changes in the Bible text."
