--- a/locale/tr.po
+++ b/locale/tr.po
@@ -2498,7 +2498,7 @@ msgstr ""
 msgid "Logout."
 msgstr ""
 
-msgid "Controls for dismissing change notifications at the top"
+msgid "Controls for selecting and dismissing change notifications at the top"
 msgstr ""
 
 msgid "This applies to the page with the change notifications."
@@ -3039,6 +3039,9 @@ msgid "(if their changes and verses match)"
 msgstr ""
 
 msgid "(all of them)"
+msgstr ""
+
+msgid "Select Bible:"
 msgstr ""
 
 msgid "This page lists the notifications of the changes in the Bible text."
