--- a/locale/nl.po
+++ b/locale/nl.po
@@ -1950,6 +1950,9 @@ msgstr ""
 msgid "The notes are no longer assigned to the user"
 msgstr ""
 
+msgid "The notes are no longer assigned to you"
+msgstr ""
+
 msgid "The status of the notes was updated"
 msgstr ""
 
@@ -4207,6 +4210,17 @@ msgstr ""
 msgid "Changes made here are not easily reverted."
 msgstr ""
 
+msgid ""
+"Use this mass update function only after you have selected which notes you "
+"want the update to apply to."
+msgstr ""
+
+msgid ""
+"For example, if you are un-assigning notes for a certain user or deleting "
+"notes for a certain book, use the Select screen first to make sure that only "
+"the notes for that user or book are selected."
+msgstr ""
+
 msgid "Amount of notes to be updated in one go:"
 msgstr ""
 
@@ -4219,7 +4233,10 @@ msgstr ""
 msgid "Assign the notes to somebody"
 msgstr ""
 
-msgid "Unassign the notes from somebody"
+msgid "Unassign somebody from the notes"
+msgstr ""
+
+msgid "Unassign yourself from the notes"
 msgstr ""
 
 msgid "Change the status of the notes"
