--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-01-19 12:15+0000\n"
+"PO-Revision-Date: 2018-01-27 14:20+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 18532)\n"
+"X-Generator: Launchpad (build 18534)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr "A fait l'envoi et la réception au cours de la dernière heure"
@@ -2035,7 +2035,7 @@ msgid "The notes are no longer assigned to the user"
 msgstr "Les notes ne sont plus affectées à l'utilisateur"
 
 msgid "The notes are no longer assigned to you"
-msgstr ""
+msgstr "Les notes ne vous sont plus assignées"
 
 msgid "The status of the notes was updated"
 msgstr "L'état des notes a été mis à jour"
@@ -3252,7 +3252,7 @@ msgid "(all of them)"
 msgstr "(tous)"
 
 msgid "Select Bible:"
-msgstr ""
+msgstr "Choisissez une Bible :"
 
 msgid "This page lists the notifications of the changes in the Bible text."
 msgstr ""
