--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-02-02 18:45+0000\n"
+"PO-Revision-Date: 2018-02-18 18:50+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2527,6 +2527,7 @@ msgstr ""
 
 msgid "Initial vertical position of the editing cursor in the Bible editors"
 msgstr ""
+"Position verticale initiale du curseur d'édition dans les éditeurs biblique"
 
 msgid "Show breadcrumbs"
 msgstr "Montrer le fil d'ariane (chemin)"
@@ -2806,7 +2807,7 @@ msgstr ""
 "Bible."
 
 msgid "Font"
-msgstr "Police de caractère"
+msgstr "Police de caractères"
 
 msgid "Enter the name of a locally available font."
 msgstr "Entrez le nom d'une police locale disponible."
@@ -4590,6 +4591,10 @@ msgid ""
 "notes for a certain book, use the Select screen first to make sure that only "
 "the notes for that user or book are selected."
 msgstr ""
+"Par exemple, si vous désattribuez des notes à un certain utilisateur ou si "
+"vous supprimez des notes pour un certain livre, utilisez d'abord l'écran "
+"Sélection pour vous assurer que seules les notes de cet utilisateur ou de ce "
+"livre sont sélectionnées."
 
 msgid "Amount of notes to be updated in one go:"
 msgstr "Nombre de notes à mettre à jour en une fois :"
@@ -4604,10 +4609,10 @@ msgid "Assign the notes to somebody"
 msgstr "Attribuer les notes à quelqu'un"
 
 msgid "Unassign somebody from the notes"
-msgstr ""
+msgstr "Désattribuer quelqu'un des notes"
 
 msgid "Unassign yourself from the notes"
-msgstr ""
+msgstr "Se désattribuer soi-même des notes"
 
 msgid "Change the status of the notes"
 msgstr "Modifier l'état des notes"
@@ -5552,10 +5557,10 @@ msgid "Install Bibledit on Chrome OS"
 msgstr "Installer Bibledit sur Chrome OS"
 
 msgid "Enable Android apps on Chrome OS."
-msgstr ""
+msgstr "Activer les applications Android sur Chrome OS"
 
 msgid "Install Bibledit from Google Play on Chrome OS."
-msgstr ""
+msgstr "Installer Bibledit depuis Google Play sur Chrome OS."
 
 msgid "Start the Bibledit app."
 msgstr "Démarrez l'application Bibledit."
