--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2018-02-18 18:50+0000\n"
+"PO-Revision-Date: 2018-04-02 10:15+0000\n"
 "Last-Translator: L'Africain <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2645,6 +2645,8 @@ msgstr "Déconexion."
 
 msgid "Controls for selecting and dismissing change notifications at the top"
 msgstr ""
+"Commandes pour sélectionner et ignorer les notifications de modification en "
+"haut"
 
 msgid "This applies to the page with the change notifications."
 msgstr "Cela s'applique à la page avec les notifications de modification."
@@ -5566,7 +5568,7 @@ msgid "Start the Bibledit app."
 msgstr "Démarrez l'application Bibledit."
 
 msgid "Leave it shortly to initialize."
-msgstr ""
+msgstr "Laissez-lui un peu de temps pour s'initialiser."
 
 msgid "Connect to Bibledit Cloud via menu Settings / Cloud."
 msgstr "Connectez-vous à Bibledit Cloud via le menu Paramètres / Cloud."
