--- a/locale/es.po
+++ b/locale/es.po
@@ -7,13 +7,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2017-05-01 21:22+0000\n"
-"Last-Translator: LinuxNerdo <Unknown>\n"
+"PO-Revision-Date: 2018-04-22 06:01+0000\n"
+"Last-Translator: Brandon Lundh <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 18599)\n"
+"X-Generator: Launchpad (build 18640)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -22,13 +22,13 @@ msgid "See the Journal for progress."
 msgstr ""
 
 msgid "Journal"
-msgstr ""
+msgstr "Diario"
 
 msgid "You are connected to a public demo of Bibledit Cloud."
-msgstr ""
+msgstr "Está conectado a una demostración pública de Bibledit Cloud."
 
 msgid "Everybody can modify the data on that server."
-msgstr ""
+msgstr "Todos pueden modificar los datos en ese servidor."
 
 msgid "After send and receive your data will reflect the data on the server."
 msgstr ""
@@ -37,7 +37,7 @@ msgid "Sending statistics"
 msgstr ""
 
 msgid "statistics"
-msgstr ""
+msgstr "estadísticas"
 
 msgid "Number of change notifications"
 msgstr ""
@@ -49,13 +49,13 @@ msgid "Number of consultation notes you are subscribed to"
 msgstr ""
 
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 msgid "Inactive for a day"
-msgstr ""
+msgstr "Inactivo por un día"
 
 msgid "Inactive for a week"
-msgstr ""
+msgstr "Inactivo por una semana"
 
 msgid "Verse mappings"
 msgstr ""
